--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@
 
 body {
   background-color: var(--primary-color);
-}
-
-nav {
   width: 95%;
 }
 
+nav {
+  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem grey;
+  padding: 5px 0;
+}
 nav ul {
   display: flex;
   justify-content: center;
