--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 nav {
   box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem grey;
   padding: 5px 0;
+  margin: 0 auto;
 }
 nav ul {
   display: flex;
